# nanochat-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md  clippy.toml  demo1.mov  rustfmt.toml
.ante/: settings.local.json
.ante/commands/: fix-until-pass.md
.github/workflows/: rust.yml
benches/: benchmarks.rs
examples/: basic.rs
reference/: gen_fixtures.py
src/: engine.rs  error.rs  hf.rs  lib.rs  main.rs  sampling.rs  tokenizer.rs  utils.rs
src/model/: builder.rs  gpt.rs  mod.rs
tests/: fixture_test.rs  integration_test.rs
