[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A template for Rust projects"
readme = "README.md"
repository = "https://github.com/yourusername/rust-template"
license = "MIT OR Apache-2.0"
keywords = ["template", "rust"]
categories = ["template"]

[dependencies]
# Common dependencies - uncomment as needed
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# tokio = { version = "1", features = ["full"] }
# anyhow = "1.0"
# thiserror = "1.0"
# clap = { version = "4.0", features = ["derive"] }
# tracing = "0.1"
# tracing-subscriber = "0.3"

[dev-dependencies]
# Testing dependencies
criterion = "0.5"
pretty_assertions = "1.0"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
